--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "scripts": {
     "dev": "nodemon ./server/server.ts",
     "build": "next build && tsc --project tsconfig.server.json",
-    "postinstall": "npm run build",
-    "start": "node .next/production-server/server.js"
+    "start": "node .next/production-server/server.js",
+    "example": "nodemon ./index.ts"
   },
   "keywords": [],
   "author": "matsdekort <matsdekort257@gmail.com>",
