--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "app",
+  "name": "db_schemas",
   "version": "1.0.0",
   "description": "",
-  "main": "tcpServer.js",
+  "main": ".next/production-server/server.js",
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
@@ -27,7 +27,7 @@
     "example": "nodemon ./index.ts"
   },
   "keywords": [],
-  "author": "matsdekort <matsdekort257@gmail.com>",
+  "author": "MatsDK",
   "license": "MIT",
-  "repository": "https://github.com/MatsDK/local-db.git"
+  "repository": "https://github.com/MatsDK/DB_Schemas"
 }
