--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "bson": "^4.2.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
+    "nanoid": "^3.1.22",
     "next": "^10.0.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.32",
     "@types/react": "^17.0.3",
     "nodemon": "^2.0.7",
@@ -23,7 +27,7 @@
   "scripts": {
     "dev": "nodemon ./server/server.ts",
     "build": "next build && tsc --project tsconfig.server.json",
-    "start": "node .next/production-server/server.js",
+    "start": "node .next/production-server/server/server.js",
     "example": "nodemon ./index.ts"
   },
   "keywords": [],
