--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   },
   "homepage": "https://github.com/MatsDK/DB_Schemas#readme",
   "devDependencies": {
+    "@types/node": "^15.0.2",
     "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "bson": "^4.3.0",
     "uuid": "^8.3.2"
   }
 }
